# File-Transfer

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  network_utils.rs  receive.rs  send.rs  utils.rs
